--- a/modules/user-directory/src/main/resources/userDirectory.properties
+++ b/modules/user-directory/src/main/resources/userDirectory.properties
@@ -15,10 +15,11 @@
 ###############################################################################
 user.lookup.class.name:${user.lookup.class.name}
 
-user.ids:admin:wasabi_reader:wasabi_writer:wasabi_admin
+user.ids:ivy
 # format
 # userId:username:password:email:firstname:lastname
-user.admin:admin:admin:admin@example.com:Wasabi:Admin
-user.wasabi_reader:wasabi_reader:wasabi01:wasabi_reader@example.com:Wasabi:Reader
-user.wasabi_writer:wasabi_writer:wasabi01:wasabi_writer@example.com:Wasabi:Writer
-user.wasabi_admin:wasabi_admin:wasabi01:wasabi_admin@example.com:Wasabi:Admin
+# user.admin:admin:admin:admin@example.com:Wasabi:Admin
+# user.wasabi_reader:wasabi_reader:wasabi01:wasabi_reader@example.com:Wasabi:Reader
+# user.wasabi_writer:wasabi_writer:wasabi01:wasabi_writer@example.com:Wasabi:Writer
+# user.wasabi_admin:wasabi_admin:wasabi01:wasabi_admin@example.com:Wasabi:Admin
+user.ivy:ivyadmin:fu6k1tsh1p1t:yaniv@ivy.co:Ivy:Admin
