adding user for oleksii

--- a/modules/user-directory/src/main/resources/userDirectory.properties
+++ b/modules/user-directory/src/main/resources/userDirectory.properties
@@ -15,7 +15,7 @@
 ###############################################################################
 user.lookup.class.name:${user.lookup.class.name}
 
-user.ids:ivy
+user.ids:ivy:oleksii
 # format
 # userId:username:password:email:firstname:lastname
 # user.admin:admin:admin:admin@example.com:Wasabi:Admin
@@ -23,3 +23,5 @@ user.ids:ivy
 # user.wasabi_writer:wasabi_writer:wasabi01:wasabi_writer@example.com:Wasabi:Writer
 # user.wasabi_admin:wasabi_admin:wasabi01:wasabi_admin@example.com:Wasabi:Admin
 user.ivy:ivyadmin:fu6k1tsh1p1t:yaniv@ivy.co:Ivy:Admin
+
+user.oleksii:oleksii:ab73stk1ller:o.pukalov@svitla.com:Oleksii:Pukalov
